--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -4424,10 +4424,7 @@ overlay to a video stream, consider the @var{overlay} filter instead.
 Obtain the average ANSNR (Anti-Noise Signal to Noise
 Ratio) between two input videos.
 
-This filter takes in input two input videos, the first input is
-considered the "main" source and is passed unchanged to the
-output. The second input is used as a "reference" video for computing
-the ANSNR.
+This filter takes in input two input videos.
 
 Both video inputs must have the same resolution and pixel format for
 this filter to work correctly. Also it assumes that both inputs
@@ -4435,13 +4432,12 @@ have the same number of frames, which are compared one by one.
 
 The obtained average ANSNR is printed through the logging system.
 
-For example:
+In the below example the input file @file{main.mpg} being processed is compared
+with the reference file @file{ref.mpg}.
+
 @example
 ffmpeg -i main.mpg -i ref.mpg -lavfi ansnr -f null -
 @end example
-
-On this example the input file @file{main.mpg} being processed is compared with the
-reference file @file{ref.mpg}.
 
 @section ass
 
